--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -29,7 +29,7 @@ table tr:hover {
 }
 
 .color-2 { /* Rojo */
-    background-color: #dc1600; /* Rojo */
+    background-color: #ff2209 !important /* Rojo */
 }
 
 .color-3 { /* Amarillo */
